# hardcaml_io_framework

./: dune-project
lib/: data_resize.ml  data_resize.mli  dune  pulse.ml  pulse.mli  register_interface.ml  register_interface.mli  router.ml  router.mli  serial_buffer.ml  serial_buffer.mli  serial_to_packet.ml  serial_to_packet.mli
test/: dune  test_pulse.ml  test_register_interface.ml  test_router.ml  test_serial_to_packet.ml
